--- a/popup/css/popup.css
+++ b/popup/css/popup.css
@@ -1,7 +1,9 @@
 main {
-  width: 15rem;
-  padding: 4rem 1rem;
+  width: 8rem;
+  font-size: 1.2rem;
+  padding: 3rem;
 }
+
 #popupForm {
   > div {
     display: flex;
