--- a/popup/css/popup.css
+++ b/popup/css/popup.css
@@ -1,11 +1,12 @@
 main {
-  width: 8rem;
+  width: 16rem;
   font-size: 1.2rem;
-  padding: 3rem;
+  font-family: 'Helvetica', sans-serif;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-#popupForm {
-  > div {
-    display: flex;
-  }
+.logo {
+  margin: 10px;
 }
