--- a/popup/css/popup.css
+++ b/popup/css/popup.css
@@ -1,7 +1,7 @@
 main {
   width: 16rem;
   font-size: 1.2rem;
-  font-family: 'Helvetica', sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-weight: bold;
   display: flex;
   align-items: center;
